--- a/7월/node_0709/.project
+++ b/7월/node_0709/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>node_web (0706)</name>
+	<name>node_0709</name>
 	<comment></comment>
 	<projects>
 	</projects>
